--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
 body {
   min-height: 100%;
   min-width: 100%;
-  background: linear-gradient(pink, violet);
+  background: linear-gradient(lightblue, red);
 }
 
 button {
@@ -27,7 +27,7 @@ button {
   box-shadow: 2px 5px 5px #333;
 }
 
-#list {
+#list, #done{
   margin: 10px;
   border: 1px solid #333;
   background: rgba(255, 255, 255, 0.75);
