--- a/style.css
+++ b/style.css
@@ -35,3 +35,22 @@ button {
   border-radius: 5px;
   box-shadow: 2px 5px 5px #333;
 }
+
+li{
+  padding: 5px 0px;
+}
+ul{
+  padding-left: 20px;
+}
+
+ol{
+  padding-left: 20px;
+}
+
+h3, h2{
+  margin: 10px 0px;
+}
+
+#donetask{
+  padding: 5px;
+}
